--- a/SymfonySki/config/services.yaml
+++ b/SymfonySki/config/services.yaml
@@ -17,8 +17,14 @@ services:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
-            - '../src/Entity/'
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Alias for the service container
+    Symfony\Component\DependencyInjection\ContainerInterface:
+        alias: service_container
+
+
+        
