--- a/SymfonySki/config/services.yaml
+++ b/SymfonySki/config/services.yaml
@@ -22,3 +22,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Alias for the service container
+    Symfony\Component\DependencyInjection\ContainerInterface:
+        alias: service_container
+
+
+        
